--- a/src/Styles/movieCard.css
+++ b/src/Styles/movieCard.css
@@ -53,3 +53,18 @@
 .mc-3 {
   margin-top: 10px;
 }
+
+.mc-btn {
+    color: rgb(255, 255, 255);
+    padding: 8px 16px 8px 16px;
+    font-size: 150%;
+    font-family: 'Courgette', cursive;
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    border: 2px solid gold;
+}
+
+.mc-btn:hover {
+  border: 2px solid white;
+}
