--- a/src/Styles/theaterCard.css
+++ b/src/Styles/theaterCard.css
@@ -13,7 +13,7 @@
   margin: 1rem;
   flex: 1 0 25rem;
   max-width: 30rem;
-  height: 30rem;
+  height: 34rem;
   transition: 0.2s;
   background-color: aliceblue;
   border-radius: 20px;
@@ -65,4 +65,23 @@
 
 .tmc-3 {
   margin-top: 10px;
+}
+
+.tmc-4 {
+  text-align: center;
+}
+
+.tmc-btn {
+  color: rgb(255, 255, 255);
+  padding: 8px 26px 8px 26px;
+  font-size: 100%;
+  font-family: 'Courgette', cursive;
+  border-radius: 20px;
+  background-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  border: 2px solid gold;
+}
+
+.tmc-btn:hover {
+  border: 2px solid white;
 }
