--- a/src/Styles/register.css
+++ b/src/Styles/register.css
@@ -1,4 +1,4 @@
-.login-container {
+.register-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,11 +7,11 @@
     width: 450px;
     border-radius: 20px;
     border: 2px solid #44BBA4;
-    margin-top: 6%;
+    margin-top: 4%;
     margin-left: 38%;
 }
 
-.login-form {
+.register-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,8 +19,8 @@
     justify-content: center;
 }
 
-.login-btn {
-    margin-top: 20px;
+.register-btn {
+    margin-top: 10px;
     margin-bottom: 10px;
     padding: 4px 12px 4px 12px;
     width: 140px;
@@ -34,7 +34,7 @@
     font-weight: bold;
 }
 
-.login-logo {
+.register-logo {
     width: 200px;
     height: 100px;
 }
