--- a/src/Styles/movie.css
+++ b/src/Styles/movie.css
@@ -3,9 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@600&display=swap');
 
 .movie-page {
-    margin-left: 40px;
+    margin-left: 7%;
     margin-top: 2%;
-    color: rgb(218, 238, 238);
+    color: white;
     font-family: 'Domine', serif;
 }
 
@@ -65,7 +65,7 @@
 
 .movie-details-content {
     font-size: 120%;
-    font-family: 'Domine', serif;
+    font-family: 'Courgette', cursive;
     font-weight: 400;
     margin-top: 2%;
     margin-left: 6%;
