--- a/src/Styles/movie.css
+++ b/src/Styles/movie.css
@@ -4,6 +4,7 @@
 
 .movie-page {
     margin-left: 7%;
+    margin-right: 5%;
     margin-top: 2%;
     color: white;
     font-family: 'Domine', serif;
@@ -11,7 +12,6 @@
 
 .movie-topic {
     font-size: 260%;
-    font-weight: 200;
     margin-top: 4%;
     margin-bottom: 4%;
 }
@@ -24,12 +24,30 @@
     border-radius: 20px;
 }
 
-.imdb-logo {
-    width: 10%;
-    margin-bottom: 12%;
-    margin-left: 4%;
+.movie-links {
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.movie-picture {
+    margin-left: 25%;
+    width: 50%;
+    height: 400px;
+}
+
+.mv-theater-btn {
+    color: rgb(255, 255, 255);
+    background-color: black;
+    padding: 8px 16px 8px 16px;
+    font-size: 150%;
+    font-family: 'Courgette', cursive;
+    border-radius: 20px;
     border: 2px solid gold;
-    border-radius: 40%;
+    float: right;
+    margin-top: 10%;
+    margin-right: 4%;
 }
 
 .cast-card {
@@ -49,12 +67,6 @@
     /* Make the image circular */
 }
 
-
-
-.movie-picture {
-    margin-left: 12%;
-    width: 50%;
-}
 
 .movie-review {
     font-size: 120%;
@@ -83,23 +95,16 @@
     font-family: 'Courgette', cursive;
     border-radius: 20px;
     background-color: rgb(45, 252, 218);
+    transition: background-color 0.3s, border 0.3s, color 0.3s, transform 0.3s;
+    /* Add transition to these properties */
 }
-
-.movie-theater-btn {
-    color: rgb(255, 255, 255);
-    background-color: black;
-    padding: 8px 16px 8px 16px;
-    font-size: 150%;
-    font-family: 'Courgette', cursive;
-    border-radius: 20px;
-    border: 2px solid gold;
-    float: right;
-    margin-top: 10%;
-    margin-right: 4%;
-}
-
 
 .movie-btn:hover {
     border: 2px solid white;
+    background-color: white;
+    /* Change background color on hover */
+    color: rgb(45, 252, 218);
+    /* Change text color on hover */
+    transform: scale(1.1);
+    /* Apply a scale transformation on hover */
 }
-
