--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,11 @@ html {
 
 body {
   font-size: 1.6rem;
-  background: var(--bg);
+  background-image: url(./Images/3418448.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: black;
+  padding-top: 1%;
 }
 
 
