--- a/src/Styles/movieCard.css
+++ b/src/Styles/movieCard.css
@@ -2,21 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@600&display=swap');
 
-.mc-list{
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 5rem;
-}
-
 .mc{
-  position: relative;
-  margin: 1rem;
-  flex: 1 0 25rem;
-  max-width: 30rem;
-  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  margin: 40px 10px 10px 10px;
+  width: 300px;
+  height: 350px;
   transition: 0.2s;
   background-color: aliceblue;
-  border-radius: 20px;
+  border-radius: 40px;
 }
 
 .mc:hover{
@@ -26,9 +20,9 @@
 
 .mc-image{
   object-fit: cover;
-  width: 30rem;
-  height: 22rem;
-  border-radius: 20px;
+  width: 100%;
+  height: 200px;
+  border-radius: 40px 40px 0px 0px;
   border-bottom: 1px solid black;
 }
 
@@ -55,16 +49,24 @@
 }
 
 .mc-btn {
+    margin-top: 12px;
+    margin-left: 35%;
     color: rgb(255, 255, 255);
-    padding: 8px 16px 8px 16px;
-    font-size: 150%;
+    padding: 4px 20px 4px 20px;
+    font-size: 100%;
     font-family: 'Courgette', cursive;
     border-radius: 20px;
     background-color: rgb(0, 0, 0);
-    border-radius: 20px;
     border: 2px solid gold;
 }
 
 .mc-btn:hover {
   border: 2px solid white;
+}
+
+.mc-title {
+  margin: 1rem 4px 4px 4px;
+  text-align: center;
+  font-family: 'Courgette', cursive;
+  font-size: 120%;
 }
