--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -24,14 +24,20 @@
     margin-bottom: 10px;
     padding: 4px 12px 4px 12px;
     width: 140px;
-    height: 50px;
+    height: 40px;
     border-radius: 20px;
-    border: 2px solid #44BBA4;
-    background-color: black;
-    color: white;
+    border: 2px solid black;
+    background-color: #44BBA4;
+    color: black;
     font-size: 100%;
     font-family: 'Domine';
     font-weight: bold;
+}
+
+.login-btn:hover {
+    transform: scale(1.1);
+    border: 2px solid #FF1493;
+    color: black;
 }
 
 .login-logo {
