--- a/src/Styles/movie.css
+++ b/src/Styles/movie.css
@@ -17,8 +17,8 @@
 }
 
 .movie-trailer {
-    width: 50%;
-    height: 400px;
+    width: 70%;
+    height: 550px;
     margin-left: 10%;
     border: 2px solid gold;
     border-radius: 20px;
@@ -32,9 +32,10 @@
 }
 
 .movie-picture {
-    margin-left: 25%;
+    margin-left: 27%;
     width: 50%;
     height: 400px;
+    border: 2px solid gold;
 }
 
 .mv-theater-btn {
@@ -91,7 +92,7 @@
     margin: 0px 0px 20px 80px;
     color: black;
     padding: 8px 16px 8px 16px;
-    font-size: 150%;
+    font-size: 130%;
     font-family: 'Courgette', cursive;
     border-radius: 20px;
     background-color: rgb(45, 252, 218);
@@ -100,11 +101,8 @@
 }
 
 .movie-btn:hover {
-    border: 2px solid white;
-    background-color: white;
-    /* Change background color on hover */
-    color: rgb(45, 252, 218);
-    /* Change text color on hover */
-    transform: scale(1.1);
-    /* Apply a scale transformation on hover */
+    border: 2px solid black;
+    background-color: gold;
+    color: black;
+    transform: scale(1.05);
 }
