--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -4,10 +4,15 @@
     float: left;
 }
 
+.navbar {
+    height: 15px;
+}
+
 .logo {
-    width: 200px; 
-    height: 100px; 
-    margin-left: 40px;
+    width: 140px; 
+    height: 60px; 
+    margin-left: 50%;
+    border-radius: 40px;
 }
 
 .nav-list {
@@ -16,13 +21,12 @@
     float: left;
     text-align: center;
     margin-right: 5%;
-    margin-left: 15%;
+    margin-left: 25%;
 }
   
 .nav-item {
     display: inline-block;
     margin-left: 50px;
-    margin-top: 20px;
 }
 
 .nav-item:hover .nav-link{
@@ -41,11 +45,11 @@
 .nav-btns {
     list-style-type: none;
     text-align: right;
-    margin-right: 2%;
+    margin-right: 4%;
 }
 
 .nav-btn {
-    margin-top: 24px;
+    margin-bottom: 10px;
     margin-left: 26px;
     background-color: rgb(0, 4, 4);
     font-size: 20px;
@@ -67,8 +71,6 @@
 }
 
 .nav-line {
-    margin-top: 25px;
-    width: 82%;
-    margin-left: 17%;
-    margin-right: 1%;
+    margin-top: 5px;
+    width: 100%;
 }
