--- a/src/Styles/register.css
+++ b/src/Styles/register.css
@@ -20,16 +20,16 @@
 }
 
 .register-btn {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 10px;
-    padding: 4px 12px 4px 12px;
-    width: 140px;
-    height: 50px;
+    padding: 2px 12px 2px 12px;
+    width: 120px;
+    height: 40px;
     border-radius: 20px;
-    border: 2px solid #44BBA4;
-    background-color: black;
-    color: white;
-    font-size: 100%;
+    border: 2px solid black;
+    background-color: #44BBA4;
+    color: black;
+    font-size: 110%;
     font-family: 'Domine';
     font-weight: bold;
     transition: transform 0.2s, background-color 0.2s;
@@ -37,13 +37,16 @@
 
 .register-btn:hover {
     transform: scale(1.1);
-    background-color: rgb(5, 109, 112);
+    border: 2px solid #FF1493;
     color: black;
 }
 
 .register-logo {
     width: 200px;
     height: 100px;
+    margin-top: 5px;
+    border-radius: 40px;
+    border: none;
 }
 
 @media screen and (max-width: 700px) {
