--- a/src/Styles/slider.css
+++ b/src/Styles/slider.css
@@ -26,7 +26,7 @@
   width: 52rem;
   height: 47rem;
   position: relative;
-  opacity: 0.4;
+  opacity: 0.7;
 }
 
 .swiper-slide.swiper-slide-active {
@@ -34,6 +34,7 @@
   height: 47rem;
   position: relative;
   opacity: 1;
+  margin-left: 50px;
 }
 
 @media (max-width: 500px) {
@@ -149,4 +150,21 @@
 .swiper-pagination .swiper-pagination-bullet-active {
   background-color: black;
   size: 4px;
+}
+
+
+/* Define a CSS animation */
+@keyframes slide-in {
+  from {
+    transform: translateY(50px);
+  }
+
+  to {
+    transform: translateY(-5px);
+  }
+}
+
+.animated-text {
+  animation: slide-in 2s ease-in-out;
+  /* Apply the animation to the element */
 }
