--- a/src/Styles/theater.css
+++ b/src/Styles/theater.css
@@ -19,8 +19,10 @@
 
 
 .theater-picture {
-    width:50%;
-    margin-left: 8%;
+    margin-left: 27%;
+    width: 50%;
+    height: 400px;
+    border: 2px solid gold;
 }
 
 .theater-review {
@@ -50,25 +52,28 @@
 }
 
 .theater-btn {
-    color: rgb(255, 255, 255);
+    margin: 0px 0px 20px 80px;
+    color: black;
     padding: 8px 16px 8px 16px;
-    font-size: 150%;
+    font-size: 130%;
     font-family: 'Courgette', cursive;
     border-radius: 20px;
-    background-color: rgb(0, 0, 0);
-    border-radius: 20px;
-    border: 2px solid gold;
+    background-color: rgb(45, 252, 218);
+    transition: background-color 0.3s, border 0.3s, color 0.3s, transform 0.3s;
+}
+
+.theater-btn:hover {
+    border: 2px solid black;
+    background-color: gold;
+    color: black;
+    transform: scale(1.05);
 }
 
 .theater-location-btn {
-    margin-top: 8%;
-    float: right;
     margin-right: 4%;
 }
 
 .theater-details-btn {
-    margin-top: 8%;
-    float: left;
     margin-left: 4%;
 }
 
@@ -82,9 +87,6 @@
     margin-right: 4%;
 }
 
-.theater-btn:hover {
-    border: 2px solid white;
-}
 
 .theater-movie-cards-list {
     margin-left: 6%;
@@ -92,4 +94,7 @@
     flex-wrap: wrap;
 }
 
-
+.theater-links {
+    margin-left: 32%;
+    margin-top: 20px;
+}
