--- a/src/Styles/movieCard.css
+++ b/src/Styles/movieCard.css
@@ -57,11 +57,15 @@
     font-family: 'Courgette', cursive;
     border-radius: 20px;
     background-color: rgb(0, 0, 0);
+    transition: 0.2s;
     border: 2px solid gold;
 }
 
 .mc-btn:hover {
   border: 2px solid white;
+  background-color: rgb(209, 184, 42);
+  color: black;
+  transform: translateY(-0.2rem);
 }
 
 .mc-title {
