--- a/src/Styles/admin/admin.css
+++ b/src/Styles/admin/admin.css
@@ -1,24 +1,24 @@
-.settings {
+.admin {
     margin-top: 20px;
 }
 
-.settings-sub-container {
+.admin-sub-container {
     display: flex;
     flex-direction: row;
 }
 
-.settings-topics {
+.admin-topics {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.settings-left {
+.admin-left {
     width: 15%;
     height: 100%;
 }
 
-.settings-right {
+.admin-right {
     width: 85%;
     height: 100%;
 }
