--- a/src/Styles/slider.css
+++ b/src/Styles/slider.css
@@ -136,6 +136,7 @@
   position: relative;
   width: 12rem !important;
   padding: 8px 2px 8px 2px;
+  margin-top: 5px;
   margin-left: 42%;
   margin-right: 42%;
   bottom: 1rem;
